--- a/Cake.VsMetrics/Cake.VsMetrics.csproj
+++ b/Cake.VsMetrics/Cake.VsMetrics.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsMetricsAliases.cs" />
     <Compile Include="VsMetricsRunner.cs" />
