--- a/Source/Cake.VsMetrics.Tests/Cake.VsMetrics.Tests.csproj
+++ b/Source/Cake.VsMetrics.Tests/Cake.VsMetrics.Tests.csproj
@@ -36,6 +36,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>..\Cake.VsMetrics.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
