--- a/Source/Cake.VsMetrics/Cake.VsMetrics.csproj
+++ b/Source/Cake.VsMetrics/Cake.VsMetrics.csproj
@@ -22,6 +22,7 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\Cake.VsMetrics.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Debug\Cake.VsMetrics.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\Cake.VsMetrics.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\Cake.VsMetrics.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cake.Core, Version=0.17.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -48,7 +50,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Check.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsMetricsAliases.cs" />
     <Compile Include="VsMetricsRunner.cs" />
