--- a/Source/Cake.VsMetrics/Cake.VsMetrics.nuspec
+++ b/Source/Cake.VsMetrics/Cake.VsMetrics.nuspec
@@ -4,8 +4,8 @@
     <id>Cake.VsMetrics</id>
     <version>0.1.0</version>
     <title>Cake.VsMetrics</title>
-    <authors>Florian Winkelbauer</authors>
-    <owners>Florian Winkelbauer, cake-contrib</owners>
+    <authors>fwinkelbauer</authors>
+    <owners>fwinkelbauer, cake-contrib</owners>
     <licenseUrl>https://github.com/fwinkelbauer/Cake.VsMetrics/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/fwinkelbauer/Cake.VsMetrics</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,4 +14,9 @@
     <copyright>Copyright (c) Cake Contributions 2017 - Present</copyright>
     <tags>Cake, Script, Build, Metrics</tags>
   </metadata>
+  <files>
+    <file src="Cake.VsMetrics.dll" target="lib\net45" />
+    <file src="Cake.VsMetrics.pdb" target="lib\net45" />
+    <file src="Cake.VsMetrics.xml" target="lib\net45" />
+</files>
 </package>
