--- a/nuspec/nuget/Cake.VsMetrics.nuspec
+++ b/nuspec/nuget/Cake.VsMetrics.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>Cake.VsMetrics</id>
-    <version>0.1.0</version>
+    <version>0.0.0</version>
     <title>Cake.VsMetrics</title>
     <authors>fwinkelbauer</authors>
     <owners>fwinkelbauer, cake-contrib</owners>
-    <licenseUrl>https://github.com/fwinkelbauer/Cake.VsMetrics/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/fwinkelbauer/Cake.VsMetrics</projectUrl>
+    <licenseUrl>https://github.com/cake-contrib/Cake.VsMetrics/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/cake-contrib/Cake.VsMetrics</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Cake Metrics AddIn</description>
     <summary>Cake AddIn for Visual Studio's standalone metrics.exe command line tool</summary>
