(GH-8) Add support for alternative tool paths
This is a first draft to provide alternative tool paths for metrics.exe
based on a ToolVersion parameter. Currently VS2013 and VS2015 are
supported

--- a/Source/Cake.VsMetrics/Cake.VsMetrics.csproj
+++ b/Source/Cake.VsMetrics/Cake.VsMetrics.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VsMetricsToolVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsMetricsAliases.cs" />
     <Compile Include="VsMetricsRunner.cs" />
