--- a/nuspec/nuget/Cake.VsMetrics.nuspec
+++ b/nuspec/nuget/Cake.VsMetrics.nuspec
@@ -7,12 +7,13 @@
     <authors>fwinkelbauer</authors>
     <owners>fwinkelbauer, cake-contrib</owners>
     <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</iconUrl>
-    <licenseUrl>https://github.com/cake-contrib/Cake.VsMetrics/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/cake-contrib/Cake.VsMetrics</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Cake Metrics AddIn</summary>
     <description>Cake AddIn for Visual Studio's standalone metrics.exe command line tool</description>
     <copyright>Copyright (c) Cake Contributions 2017 - Present</copyright>
+    <license type="expression">MIT</license>
+    <repository type="git" url="https://github.com/cake-contrib/Cake.VsMetrics.git"/>
     <tags>Cake, Script, Build, Metrics</tags>
   </metadata>
   <files>
